// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show display in progres when movie is been fetching 1`] = `
<div>
  Loading...
</div>
`;

exports[`show error when movie fetch has failed 1`] = `
<div>
  Error...
</div>
`;

exports[`show movie list when movies fetched 1`] = `
<div>
  Loading...
</div>
`;
